# sphinx-all-contributors

./: .all-contributorsrc  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  noxfile.py  package.json  pyproject.toml  requirements.txt  tox.ini
.github/: dependabot.yml  release-please-config.json
.github/workflows/: conventional-commits.yml  labeler.yml  publish-to-pypi.yml  release-please.yml  test.yml
docs/: conf.py  index.rst
sphinx_all_contributors/: directive.py
src/sphinx_all_contributors/: __init__.py  directive.py
src/sphinx_all_contributors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  conf.py  test_directive.py
