[build-system]
requires = ['setuptools<69.0.4']
build-backend = 'setuptools.build_meta'

[project]
name = "sphinx-all-contributors"
requires-python = '>=3.12'
version = "0.2.dev0"
dynamic = [
  "readme"
]

[tool.mypy]
ignore_missing_imports = true
strict = true
warn_unreachable = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]

[tool.poetry]
name = "sphinx-all-contributors"
readme = "README.md"
authors = ["Tetsuo Koyama"]
description = "all-contributors for Sphinx users"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = ["-ra", "--showlocals", "--strict-markers", "--strict-config"]
xfail_strict = true
filterwarnings = ["error"]
log_cli_level = "info"
testpaths = [
  "tests"
]

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["COM812", "D203", "D212", "ISC001"]

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}
