[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools<69.0.4']

[project]
dynamic = ["readme"]
name = "sphinx-all-contributors"
requires-python = '>=3.12'
version = "0.3.dev0"

[project.optional-dependencies]
all = ['sphinx-all-contributors[docs]']
docs = ['sphinx-book-theme==1.1.3']

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.poetry]
authors = ["Tetsuo Koyama"]
description = "all-contributors for Sphinx users"
name = "sphinx-all-contributors"
readme = "README.md"

[tool.pytest.ini_options]
addopts = ["--showlocals", "--strict-config", "--strict-markers", "-ra"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli_level = "info"
minversion = "6.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["COM812", "D203", "D212", "ISC001"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
