[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools>=77.0.3,<77.0.4']

[project]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dynamic = ["readme"]
name = "sphinx-all-contributors"
requires-python = '>=3.12'
version = "0.3.dev0"

[project.optional-dependencies]
all = ['sphinx-all-contributors[docs]']
docs = ['sphinx-book-theme==1.1.3']

[project.urls]
Documentation = "https://sphinx-all-contributors.readthedocs.io/en/latest"
Homepage = "https://sphinx-all-contributors.readthedocs.io/en/latest"
Issues = "https://github.com/tkoyama010/sphinx-all-contributors/issues"
Repository = "https://github.com/tkoyama010/sphinx-all-contributors"

[tool.mypy]
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
ignore_missing_imports = true
strict = true
warn_unreachable = true

[tool.poetry]
authors = [{ name = "Tetsuo Koyama", email = "tkoyama010@gmail.com" }]
description = "all-contributors for Sphinx users"
name = "sphinx-all-contributors"
readme = "README.md"

[tool.pytest.ini_options]
addopts = ["--showlocals", "--strict-config", "--strict-markers", "-ra"]
filterwarnings = ["error", "ignore::DeprecationWarning"]
log_cli_level = "info"
minversion = "6.0"
testpaths = ["tests"]
xfail_strict = true

[tool.ruff.lint]
extend-select = ["ALL"]
ignore = ["COM812", "D203", "D212", "ISC001"]

[tool.setuptools.dynamic]
readme = { file = "README.md", content-type = "text/markdown" }
